--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
